--- a/index.html
+++ b/index.html
@@ -745,12 +745,12 @@
           <span class="collage-text__tag">@roccnaturals</span>
         </div>
         <div class="collage-images">
-          <img src="../images/col1.jpg" alt="col" class="collage__img grid-1" />
-          <img src="../images/col2.jpg" alt="col" class="collage__img grid-2" />
-          <img src="../images/col3.jpg" alt="col" class="collage__img grid-3" />
-          <img src="../images/col4.jpg" alt="col" class="collage__img grid-4" />
-          <img src="../images/col5.jpg" alt="col" class="collage__img grid-5" />
-          <img src="../images/col6.jpg" alt="col" class="collage__img grid-6" />
+          <img src="images/col1.jpg" alt="col" class="collage__img grid-1" />
+          <img src="images/col2.jpg" alt="col" class="collage__img grid-2" />
+          <img src="images/col3.jpg" alt="col" class="collage__img grid-3" />
+          <img src="images/col4.jpg" alt="col" class="collage__img grid-4" />
+          <img src="images/col5.jpg" alt="col" class="collage__img grid-5" />
+          <img src="images/col6.jpg" alt="col" class="collage__img grid-6" />
         </div>
       </section>
       <footer class="footer">
